--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,7 +7,7 @@
   border: none;
   border-radius: 5px;
   box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
-  color: var(--tertiary-color);
+  color: var(--btn-text-color);
   cursor: pointer;
   font-weight: var(--font-weight--semi-bold);
   margin-bottom: 0.5rem;
