--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -10,5 +10,21 @@
 
 .free-trial-offer {
   background-image: url('images/bg-intro-mobile.png');
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 5.5rem 1.5rem 4.25rem 1.5rem;
+
+  @media (min-width: 68.75rem) {
+    background-image: url('images/bg-intro-desktop.png');
+    flex-direction: row;
+    gap: 2.8125rem;
+  }
+}
+
+.hero-container {
+  @media (min-width: 68.75rem) {
+    flex-basis: 32.8125rem;
+  }
 }
