--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 :root {
-  --primary-color: hsl(0 100% 74%);
+  --primary-color: hsl(0 100% 68%);
   --secondary-color: hsl(154 59% 51%);
   --tertiary-color: hsl(0 0% 100%);
   --accent-color: hsl(248 32% 49%);
   --form-primary-color: hsl(249 10% 26%);
-  --form-secondary-color: hsl(246 25% 77%);
+  --form-secondary-color: hsl(246 18% 52%);
+  --form-label-color: hsl(248, 3%, 47%);
   --form-default-border: hsl(0, 0%, 87%);
+  --btn-text-color: hsl(170 97% 15%);
   --btn-hover-color: hsl(154 65% 68%);
   --font-weight--bold: 700;
   --font-weight--semi-bold: 600;
@@ -41,6 +43,15 @@ html {
   margin-bottom: 1rem;
   text-align: center;
 }
+@media (min-width: 68.75rem) {
+  .free-trial-offer h2 {
+    font-size: 3.125rem;
+    letter-spacing: -0.52px;
+    line-height: 1.1;
+    margin-bottom: 1.5rem;
+    text-align: left;
+  }
+}
 
 .free-trial-offer p {
   color: var(--tertiary-color);
@@ -49,12 +60,18 @@ html {
   margin-bottom: 4.25rem;
   text-align: center;
 }
+@media (min-width: 68.75rem) {
+  .free-trial-offer p {
+    text-align: left;
+  }
+}
 
 fieldset {
   border: none;
 }
 
 legend {
+  margin-bottom: 1.5rem;
   width: 100%;
 }
 
@@ -70,10 +87,6 @@ a {
 
 .hidden {
   display: none;
-}
-
-.active {
-  display: block;
 }
 
 .sr-only {
@@ -93,7 +106,7 @@ a {
   border: none;
   border-radius: 5px;
   box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
-  color: var(--tertiary-color);
+  color: var(--btn-text-color);
   cursor: pointer;
   font-weight: var(--font-weight--semi-bold);
   margin-bottom: 0.5rem;
@@ -107,6 +120,12 @@ a {
   background-color: var(--btn-hover-color);
 }
 
+@media (min-width: 68.75rem) {
+  .cta {
+    flex-basis: 33.75rem;
+  }
+}
+
 .cta__form h3 {
   background-color: var(--accent-color);
   border-radius: 10px;
@@ -115,7 +134,6 @@ a {
   font-size: 0.9375rem;
   font-weight: var(--font-weight--regular);
   letter-spacing: 0.27px;
-  margin-bottom: 1.5rem;
   padding: 1.125rem 3rem;
   text-align: center;
 }
@@ -147,6 +165,11 @@ a {
   box-shadow: 0px 8px 0px rgba(0, 0, 0, 0.14688);
   padding: 1.5rem;
 }
+@media (min-width: 68.75rem) {
+  .cta__form .field-container {
+    padding: 2.5rem;
+  }
+}
 
 .cta__form .field {
   position: relative;
@@ -165,13 +188,14 @@ a {
   width: 100%;
 }
 .cta__form .field input:focus {
-  background-color: var(--tertiary-color);
   box-shadow: 0 0 0 1px hsl(0deg, 0%, 100%), 0 0 0 2px hsl(248deg, 32%, 49%);
+  outline: 2px dotted hsla(248deg, 32%, 49%, 0.5);
+  outline-offset: -3px;
 }
 .cta__form .field input:valid {
   box-shadow: 0 0 0 1px hsl(0deg, 0%, 100%), 0 0 0 2px hsl(0deg, 0%, 87%);
 }
-.cta__form .field input:focus ~ label, .cta__form .field input:valid ~ label {
+.cta__form .field input:focus ~ label, .cta__form .field input:valid ~ label, .cta__form .field input:not(:placeholder-shown):not(:focus):invalid ~ label {
   background-color: var(--tertiary-color);
   font-size: 0.6875rem;
   font-weight: var(--font-weight--regular);
@@ -179,8 +203,18 @@ a {
   left: 0.75rem;
   padding: 0 5px 0 5px;
 }
+.cta__form .field input:not(:placeholder-shown):not(:focus):invalid ~ label {
+  color: var(--primary-color);
+}
+.cta__form .field input:not(:placeholder-shown):not(:focus):invalid {
+  box-shadow: 0 0 0 1px hsl(0deg, 100%, 74%), 0 0 0 2px hsl(0deg, 100%, 74%);
+}
+.cta__form .field input:not(:placeholder-shown):not(:focus):invalid ~ .error-message, .cta__form .field input:not(:placeholder-shown):not(:focus):invalid ~ .error-icon {
+  display: block;
+}
 .cta__form .field label {
-  color: var(--form-primary-color);
+  background-color: var(--tertiary-color);
+  color: var(--form-label-color);
   display: block;
   font-weight: var(--font-weight--semi-bold);
   pointer-events: none;
@@ -188,6 +222,23 @@ a {
   left: 1.125rem;
   top: 0.625rem;
   transition: 0.2s;
+}
+.cta__form .field .error-icon {
+  display: none;
+  position: absolute;
+  top: 0.725rem;
+  right: 1rem;
+}
+.cta__form .field .error-message {
+  color: var(--primary-color);
+  display: none;
+  font-size: 0.6875rem;
+  font-style: italic;
+  line-height: 1.5;
+  margin-top: -1rem;
+  margin-bottom: 1rem;
+  text-align: right;
+  padding: 0;
 }
 
 .container {
@@ -198,10 +249,28 @@ a {
 
 .free-trial-offer {
   background-image: url("images/bg-intro-mobile.png");
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 5.5rem 1.5rem 4.25rem 1.5rem;
+}
+@media (min-width: 68.75rem) {
+  .free-trial-offer {
+    background-image: url("images/bg-intro-desktop.png");
+    flex-direction: row;
+    gap: 2.8125rem;
+  }
+}
+
+@media (min-width: 68.75rem) {
+  .hero-container {
+    flex-basis: 32.8125rem;
+  }
 }
 
 .attribution {
+  color: var(--form-secondary-color);
   font-family: "Poppins", sans-serif;
   font-size: 0.6875rem;
   font-weight: var(--font-weight--medium);
@@ -209,8 +278,9 @@ a {
   text-align: center;
 }
 .attribution a {
-  color: var(--accent-color);
+  color: var(--primary-color);
 }
 .attribution a:hover {
   color: var(--primary-color);
+  text-decoration: underline;
 }
